<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_toolbar"
...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/meeting_add_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/sDistance"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/sDistance"
...
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/mDistance"
                android:layout_marginTop="@dimen/addMeeting_toolbar_top"
                android:layout_marginEnd="@dimen/mDistance"
                android:layout_marginBottom="@dimen/mDistance"
                android:layout_toStartOf="@+id/meeting_add_create_btn"
                android:layout_toEndOf="@id/meeting_add_cancel_btn"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/bText" />

...
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/sDistance"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_card_title" />

                <EditText
                    android:id="@+id/meeting_add_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mDistance"
                    android:layout_marginTop="@dimen/bDistance"
                    android:layout_marginEnd="@dimen/mDistance"
                    android:autofillHints="nothing"
...
                    <TextView
                        android:id="@+id/text_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meeting_date"
                        android:textColor="@color/carbonGray"
                        app:layout_constraintBottom_toTopOf="@+id/meeting_add_date"
                        app:layout_constraintStart_toStartOf="@+id/meeting_add_date"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/meeting_add_date"
                        style="@style/Widget.AppCompat.Spinner"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/bDistance"
                        android:layout_marginStart="@dimen/mDistance"
                        android:text="@string/meeting_hour_from"
                        android:textColor="@color/carbonGray"
                        app:layout_constraintBottom_toTopOf="@+id/meeting_add_hour_start"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/meeting_add_date" />

                    <Spinner
                        android:id="@+id/meeting_add_hour_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/meeting_hint_hour_from"
                        android:textSize="@dimen/mText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/meeting_add_hour_end"
                        app:layout_constraintStart_toStartOf="parent" />


                    <TextView
                        android:id="@+id/text_hour_to"
                        android:layout_width="wrap_content"
...
                        android:id="@+id/text_hall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/mDistance"
                        android:text="@string/meeting_hall"
                        android:textColor="@color/carbonGray"
                        app:layout_constraintStart_toStartOf="@+id/meeting_add_hall"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/meeting_add_hall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tDistance"
                    android:layout_marginTop="@dimen/lDistance"
                    android:text="@string/meeting_participants"
                    android:textColor="@color/carbonGray"
                    app:layout_constraintTop_toBottomOf="@+id/layout_date_hour_hall"
                    app:layout_constraintBottom_toTopOf="@+id/meeting_add_participants_edit"
                    app:layout_constraintStart_toStartOf="@+id/meeting_add_participants_edit" />

                <EditText
                    android:id="@+id/meeting_add_participants_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mDistance"
                    android:hint="@string/meeting_hint_participants"
                    android:textSize="@dimen/mText"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toStartOf="@+id/meeting_participants_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_participants"
                    android:autofillHints="false" />

                <ImageButton
                    android:id="@+id/meeting_participants_btn"
...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/mDistance"
                        android:layout_marginEnd="@dimen/mDistance" >

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/meeting_list_participants"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/sDistance"
                            android:paddingEnd="@dimen/sDistance"
                            android:gravity="start|top" />

...
