<resources>
    <string name="app_name">Ma réu</string>
    <string name="delete_button">Delete button for meetings list</string>

    <!--Filters names-->
    <string name="filter_title">Toutes les réunions</string>
    <string name="filter_by_day">Dans une journée</string>
    <string name="filter_by_hall">Dans une salle</string>

    <!--Filters halls-->
    <string name="h1">Salle A</string>
    <string name="h2">Salle B</string>
    <string name="h3">Salle C</string>
    <string name="h4">Salle D</string>
    <string name="h5">Salle E</string>
    <string name="h6">Salle F</string>
    <string name="h7">Salle G</string>
    <string name="h8">Salle H</string>
    <string name="h9">Salle I</string>
    <string name="h10">Salle J</string>

    <!--Full-Screen Dialog add new meeting-->
    <string name="meeting_card_title">Planifier la réunion</string>
    <string name="meeting_title">Sujet</string>
    <string name="meeting_date">Date</string>
    <string name="meeting_hint_date">30/04/2020</string>
    <string name="meeting_hour">l\'heure</string>
    <string name="meeting_hour_from">De</string>
    <string name="meeting_hint_hour_from">9:30</string>
    <string name="meeting_hour_to">A</string>
    <string name="meeting_hint_hour_to"> - 10:30</string>
    <string name="meeting_hall">Salle</string>
    <string name="meeting_participants">Participants</string>
    <string name="meeting_hint_participants">participant.de@ma.réunion</string>

    <!-- format string for display Hour end of meeting -->
    <string name="hour_end">- %1$s</string>

    <!-- SNACKBAR texts -->
    <string name="snack_action_btn">OK</string>

    <!-- The message to communicate to user -->
    <string name="thanks">Merci</string>

</resources>
